# KeyTik

./: .gitignore  .pre-commit-config.yaml  Build Guide.txt  CONTRIBUTING.md  KeyTik.py  LICENSE  LICENSE.md  NOTICE.txt  Python Library.txt  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: automation-tool-suggestion.md  bug-report.md  bug_report.md  feature_request.md  feature_suggestion.md  key-request.md  question.md  supported-key-suggestion.md  windows-warning-report.md
.github/workflows/: codeql.yml  pylint.yml  sponsors.yml
Data/: Main - Copy.py  Main.py
_internal/: Main.py  main.py
_internal/Data/: 1.md  2.md  3.md  4.md  6.md  ahk_install.bat  changelog.md  config.json  dont_show.json  inter_install.bat  key_list.txt  pinned_profiles.json  welcome.md
keytik/: main.py
keytik/dashboard/: dashboard_core.py  dashboard_ui.py
keytik/script_profile/: parse_script.py  profile_ui.py  remap_row.py  remap_row_core.py  write_script.py
keytik/select_device/: select_device.py
keytik/select_key/: select_key_core.py  select_key_ui.py
keytik/select_program/: select_program_core.py  select_program_ui.py
keytik/setting/: announcement.py  setting_core.py  setting_ui.py
keytik/utility/: constant.py  diff.py  icons.py  style.py  thread.py  utils.py
src/: main.py
src/announcement/: announcement.py
src/component/: main_logic.py
src/core/: main_core.py  main_logic.py  write_script.py
src/dashboard/: dashboard.py  dashboard_core.py  dashboard_ui.py  dashborad.py
src/logic/: logic.py  (+4 more)
(+93 files in other folders)
