[project]
name = "keytik"
version = "2.3.5"
description = "A Powerful Multi-Profile Key Mapper, Clicker, Macro, and More."
authors = [
    {name = "Fajar Rahmad Jaya",email = "Fajar.Rahmad.Jaya.Profile@gmail.com"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "keyboard (>=0.13.5,<0.14.0)",
    "requests (>=2.33.1,<3.0.0)",
    "markdown (>=3.10.2,<4.0.0)",
    "psutil (>=7.2.2,<8.0.0)",
    "pyside6==6.11.0",
    "pynput (>=1.8.1,<2.0.0)",
    "pywin32 (>=311,<312)",
    "winshell (>=0.6,<0.7)"
]

[dependency-groups]
lint = [
    "pylint>=4.0.5",
]
pyinstaller = [
    "pyinstaller>=6.19.0",
]
